# kdropcl

./: CLNeuralNetworkConfig.h.in  CMakeLists.txt  a.out  quant.cpp  run.cpp
kernel_helpers/: random.cl
kernels/: hello.cl  random.cl  random_vector.cl  rnd_float32_matrix.cl  vector_add.cl
modules/: CMakeLists.txt  DeviceStats.hpp  Quant.cpp  Quant.hpp
modules/Random_Float32_Matrix/: Random_Float32_Matrix.cpp  Random_Float32_Matrix.hpp
types/: QuantEnums.hpp
